<resources>
    <string name="app_name"> k-connect </string>
    <string name="logo">social. logo</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_chat">Chat</string>
    <string name="usernameOrEmail">usernameOrEmail</string>
    <string name="username">username</string>
    <string name="username_lorem">randomusername567</string>
    <string name="username_tag">\@randomusername567</string>
    <string name="full_name">full name</string>
    <string name="full_name_lorem">Duong Van Hoan</string>
    <string name="password">password</string>
    <string name="login">Đăng nhập</string>
    <string name="back_login">Quay lại</string>
    <string name="register">Đăng Ký</string>
    <string name="email">email</string>
    <string name="biography">biography</string>
    <string name="biography_lorem">This is my biography hello everyone!</string>
    <string name="location">location</string>
    <string name="add_user_button">Add user button</string>
    <string name="profile_picture_in_a_circle">profile picture in a circle</string>
    <string name="error_sign">Lỗi đăng nhập</string>
    <string name="error_message">error message</string>
    <string name="error">ERROR! Something unexpected happened</string>
    <string name="success">SUCCESS</string>
    <string name="success_sign">Đăng nhập thành công</string>
    <string name="enter_message">Nhập tin nhắn...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_new_befake">Post a BeFake</string>
    <string name="posted_ago">23min late</string>
    <string name="settings_button">settings button</string>
    <string name="main_photo">main photo</string>
    <string name="description">description</string>
    <string name="add_description">Thêm mô tả</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="see_comments">See n comment</string>
    <string name="reaction_icon">reaction icon</string>
    <string name="comment_icon">comment icon</string>
    <string name="left_arrow_button">left arrow button</string>
    <string name="joined_at">Joined social in September 2025</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="edit_my_profile">Chỉnh sửa trang cá nhân</string>
    <string name="only_visible_to_you">Only visible to you.</string>
    <string name="tba">TBA</string>
    <string name="location_icon">location icon</string>
    <string name="location_lorem">Đà nẵng - Việt Nam</string>
    <string name="description_lorem">This is a nice description of a nice photo ❤️ Also, this description takes up a little more space than one line</string>
    <string name="check_button">check button</string>
    <string name="placeholder">placeholder</string>
    <string name="camera_icon">camera icon</string>
    <string name="logout">Đăng xuất</string>
    <string name="friends">Bạn bè</string>
    <string name="add_friends">Thêm bạn bè</string>
    <string name="my_friends">Dánh sách bạn bè</string>
    <string name="search_button">search button</string>
    <string name="search_by_username">tìm kiếm bằng username</string>
    <string name="add">Thêm</string>
    <string name="search_results">kết quả tìm kiếm</string>
    <string name="confirm">xác nhận</string>
    <string name="remove_friend_button">xóa kết bạn</string>
    <string name="friend_requests">yêu cầu kết bạn</string>
    <string name="notification_title">Thông báo</string>
    <string name="friend_list">Bạn bè</string>
    <string name="no_friends_message">Search for friends so you can share your moments with them!</string>
    <string name="reactions">Cảm xúc</string>
    <string name="comments">Bình luận</string>
    <string name="interactions">Biểu cảm</string>
    <string name="comment_lorem">In publishing and graphic design, Lorem ipsum is a placeholder text. In publishing and graphic design, Lorem ipsum is a placeholder text</string>
    <string name="remove_comment_button">remove comment button</string>
    <string name="delete_this_comment">Delete this comment</string>
    <string name="send">Gửi</string>
    <string name="add_comment">Thêm bình luận...</string>
    <string name="create_post">Tạo bài viết mới</string>
    <string name="message_title">Tin nhắn</string>
    <string name="back">trở về</string>
    <string name="whats_on_your_mind">bạn đang nghĩ gì?</string>
    <string name="live_video">live video</string>
    <string name="photo_video">picture video\n</string>
    <string name="reel">reel video\n</string>
    <string name="search_conversation">tìm kiếm...</string>
    <string name="remove_button">Xóa</string>
    <string name="notification_lorem">Thông báo: Abc vừa gửi cho bạn tin nhắn</string>
    <string name="clear_image">xóa\n</string>
    <string name="hint_image_preview">bạn đã chọn ảnh</string>
    <string name="react_like">like\n</string>
    <string name="react_love">love\n</string>
    <string name="react_haha">haha\n</string>
    <string name="react_sad">sad</string>
    <string name="react_tired">tired</string>
    <string name="pending">đã gửi</string>
</resources>