<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ll_register"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.633">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:background="@color/transparent"
            app:startIconDrawable="@drawable/ic_user_solid">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_input"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:background="@color/transparent"
            app:startIconDrawable="@drawable/ic_user_solid">

            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_input"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textColor="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:background="@color/transparent"
            app:startIconDrawable="@drawable/ic_envelope_solid">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_input"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:background="@color/transparent"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_key_solid">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="40dp"
            android:clickable="false"
            android:elevation="0dp"
            android:enabled="true"
            android:text="@string/register"
            app:backgroundTint="@color/green" />


        <Button
            android:id="@+id/btn_switch_to_login"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="20dp"
            android:elevation="0dp"
            android:text="@string/back_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
