<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragment.CommentsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comments_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:padding="0dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/underline_dark">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30px"
                android:layout_marginVertical="15dp"
                android:contentDescription="@string/left_arrow_button"
                android:src="@drawable/ic_arrow_left_solid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/comments"
                android:textColor="@color/light_grey"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_add_comment"
        app:layout_constraintTop_toBottomOf="@id/comments_toolbar"
        tools:listitem="@layout/item_comment" />


    <EditText
        android:id="@+id/et_add_comment"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:background="@drawable/send_comment_input"
        android:hint="@string/add_comment"
        android:inputType="textNoSuggestions"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/medium_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_comment_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comments_recycler_view" />

    <Button
        android:id="@+id/send_comment_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/send"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_add_comment"
        app:layout_constraintTop_toBottomOf="@id/comments_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>